k8s/client-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-client
  labels:
    app: expense-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-client
  template:
    metadata:
      labels:
        app: expense-client
    spec:
      containers:
        - name: expense-client
          image: mituldeolikar/expense-client:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: expense-client-service
spec:
  type: ClusterIP  # Use LoadBalancer if you're on a cloud provider
  selector:
    app: expense-client
  ports:
    - port: 80
      targetPort: 80
