k8s/mysql-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-mysql
  labels:
    app: expense-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-mysql
  template:
    metadata:
      labels:
        app: expense-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
            - mountPath: /docker-entrypoint-initdb.d
              name: initdb
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: initdb
          configMap:
            name: mysql-initdb-config
---
apiVersion: v1
kind: Service
metadata:
  name: expense-mysql-service
spec:
  selector:
    app: expense-mysql
  ports:
    - port: 3306
      targetPort: 3306
