k8s/server-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-server
  labels:
    app: expense-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-server
  template:
    metadata:
      labels:
        app: expense-server
    spec:
      containers:
        - name: expense-server
          image: mituldeolikar/expense-server:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: expense-server-service
spec:
  selector:
    app: expense-server
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500  # Access via <NodeIP>:30500
