k8s/expense-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: expense.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-client-service
                port:
                  number: 80
